--- a/html templates/signup.html
+++ b/html templates/signup.html
@@ -72,17 +72,23 @@
               <input class="form-input" type="phone" id="phone-signup" />
             </div>
             <div class="form-group">
-              <label for="post-desc">address</label>
+              <label for="address-signup">address</label>
               <textarea
                 class="form-input"
-                id="post-desc"
-                name="post-desc"
+                id="address-signup"
+                name="address-signup"
                 rows="4"
                 cols="50"
               ></textarea>
             </div>
             <div class="form-group">
-              <button class="btn btn-primary" type="submit">signup</button>
+              <button
+                class="btn btn-primary"
+                type="submit"
+                onclick="signupFormHandler(event)"
+              >
+                signup
+              </button>
             </div>
           </form>
         </div>
@@ -90,4 +96,5 @@
       <footer></footer>
     </div>
   </body>
+  <script src="/public/js/login.js"></script>
 </html>
